--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <nav>
   <ul>
-    <li><a href ="home.html"><b>Home</b></a></li>
+    <li><a href ="main.html"><b>Home</b></a></li>
     <li><a href ="about.html"><b>About</b></a></li>
   </ul>
  </nav>
